<resources>
    <string name="app_name">ToyApp</string>
    <string name="orgName">Organization name:</string>
    <string name="org_Address">Address:</string>
    <string name="Organization_info">Organization Details</string>
    <string name="Donation_info">About Donation</string>
    <string name="toy_Gender">Gender:</string>
    <string name="toy_Type">Type:</string>
    <string name="checkBox1">I agree to the Terms of Services and Privacy Policy </string>
    <string name="toy_Quantity">Quantity:</string>
    <string name="age_Group">Age Group:</string>
    <string name="EmailAddress">Email:</string>
    <string name="org_Phone">Contact No:</string>
    <string name="donat_Period">Period:</string>
    <string name="comments">Comments:</string>
    <string name="btn_Submit">Submit</string>
    <string name="request_form">Request Toy Form</string>
    <string name="btnopen">Requests</string>


    <string name="viewOrg_details">Organization:  Caliyin Releif Foundation</string>
    <string name="viewOrg_address">Address: 591, Almed Avenue</string>
    <string name="orgemail">Email:  CaliyinRelief@greystar.com</string>
    <string name="orgphone">Contact No:  0771443321</string>
    <string name="dontype">Donation Type:    Pre-School</string>
    <string name="dongender">Gender:  Female</string>
    <string name="donationInfo">Description:  we will be needing 60 dolls for children age around 2-4. They can be used or new but we would want it to be clean and healthy the donation period will be from 1-10-2020 to 2-12-2020 .</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="donation_request">Donation Requests</string>
    <string name="donate1">Donate Toys</string>
    <string name="donate2">Apply for Toys</string>
    <string name="home">Donations</string>
    <string name="intro">The children and families we support remain at the heart of everything we do, it’s so important that we help them end 2021 on a brighter note.Thank you to everyone across the country who donated toys in 2021.</string>
    <string name="donation_form">Donation Form</string>
    <string name="userinfo">Your Information</string>
    <string name="user_name">Name</string>
    <string name="user_mail">Email</string>
    <string name="user_city">City</string>
    <string name="user_state"> State</string>
    <string name="toy_info">Toy Details</string>
    <string name="toy_type">Type</string>
    <string name="toy_des">Description</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_donate">Donate</string>
    <string name="Org_donating">Organization</string>
    <string name="Org_select">Select</string>
    <string name="about_pg">About Donation</string>
    <string name="about_don">How to Donate ?</string>
    <string name="para2">To help us prevent infection and maintain children safety and well-being the Toys should be sturdy and free of any parts that may pinch or break off. All Toys must be non-toxic and also the toys should be wrapped properly before donating If the items don’t fall within our guidelines or are unsafe/inappropriate for children, organizations reserve the right to politely decline donations.</string>
    <string name="direct_donation">Donate your Toys directly</string>
    <string name="purchase_donation">Donate toys by purchasing</string>
    <string name="para3">There are 2 methods to support our donation. (1) You can donate your own used or unused toys directly to the organization with details. (2)You can purchase toys from our app and then make the donation by filling the form .</string>
    <string name="my_donations">My Donations</string>
    <string name="my_donations2">Donations Made</string>
    <string name="donation1">Donation 1</string>
    <string name="detail1">Details</string>
    <string name="date">13/08/2021</string>
    <string name="item1">Donation Item</string>
    <string name="toyName">Name : Teddy Bear</string>
    <string name="permission">Pending</string>
    <string name="type_input">Soft Toys</string>
    <string name="about_toy">This is a pack of 3 Teddy bears which are very soft in material and never used. There will be no harm to children when using this toy</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_type">Enter Type</string>
    <string name="suggestion">Your Suggestion</string>
    <string name="email">Email</string>
    <string name="btn_send">Send Message</string>
    <string name="note2">We may not reply to your E-mail directly, we will sincerely take your precious suggestions and comments</string>
    <string name="calculation_pg">Donation Calculation</string>
    <string name="require">Quantity Required :</string>
    <string name="receive">Quantity Received :</string>
    <string name="percentage">Percentage of donations made</string>
    <string name="pert_value">43%</string>
    <string name="donation_request1">Donation Requests</string>
    <string name="requests">Toy Requests</string>
    <string name="btn_donate2">Donate Now</string>
    <string name="org1">Helping Hands</string>
    <string name="org3">Bay Sevice</string>
    <string name="org_3">Ash Street</string>
    <string name="org_9">Kids_J</string>
    <string name="organization">Organization Requests</string>
    <string name="calculation">Calculate</string>
    <string name="title_activity_about_donation">AboutDonation</string>


</resources>