<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpCenter">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/Perisimone"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
    <ImageView
        android:id="@+id/fbarrow"
        android:layout_width="40dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="195dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="baskerville"
        android:text="@string/feedback"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/fbarrow"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/note"
        android:layout_width="331dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="44dp"
        android:fontFamily="baskerville"
        android:text="@string/note2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suggestion" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="57dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note"
        app:srcCompat="@android:drawable/sym_action_email"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/email"
        android:layout_width="275dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/note" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="285dp"
        android:layout_height="59dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="44dp"
        android:text="SEND MESSAGE"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/Perisimone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/ty"
        android:layout_width="305dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:hint="@string/feedback_type"
        android:inputType="textPersonName"
        android:paddingLeft="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <EditText
        android:id="@+id/suggestion"
        android:layout_width="310dp"
        android:layout_height="108dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/suggestion"
        android:inputType="textMultiLine"
        android:paddingLeft="7dp"
        android:paddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ty" />


</androidx.constraintlayout.widget.ConstraintLayout>