<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonCalculation">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/Perisimone"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/calarrow"
        android:layout_width="40dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/calculation_pg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/calculation_pg"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/calarrow"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/require"
        android:layout_width="163dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/receive"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/receive"
        android:layout_width="165dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/require"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/require" />

    <EditText
        android:id="@+id/qReq"
        android:layout_width="177dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/require"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <EditText
        android:id="@+id/qRec"
        android:layout_width="177dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/receive"
        app:layout_constraintTop_toBottomOf="@+id/qReq" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/percentage"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="215dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="@+id/border"
        app:layout_constraintEnd_toEndOf="@+id/border"
        app:layout_constraintStart_toStartOf="@+id/border"
        app:layout_constraintTop_toTopOf="@+id/border"
        app:srcCompat="@drawable/pbar"
        app:tint="@color/Perisimone" />

    <TextView
        android:id="@+id/border"
        android:layout_width="265dp"
        android:layout_height="237dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="95dp"
        android:layout_height="39dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="96dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/border"
        app:layout_constraintTop_toTopOf="@+id/border"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:onClick="Calcu"
        android:text="CALCULATE"
        app:backgroundTint="@color/Perisimone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receive" />

</androidx.constraintlayout.widget.ConstraintLayout>