<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbtDonation">

    <Button
        android:id="@+id/btnh"
        android:layout_width="294dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:onClick="Help"
        android:text="DONATE TOYS BY PURCHASING"
        app:backgroundTint="@color/Perisimone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="294dp"
        android:layout_height="58dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:onClick="Help"
        android:text="MAKE AN INQUIRY"
        app:backgroundTint="@color/Perisimone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnh" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/Perisimone"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fbarrow"
        android:layout_width="40dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/toolbar4"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:srcCompat="?attr/actionModeCloseDrawable"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="baskerville"
        android:text="@string/about_pg"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/fbarrow"
        app:layout_constraintTop_toTopOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="8dp"
        android:fontFamily="baskerville"
        android:text="@string/about_don"
        android:textColor="@color/Perisimone"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="289dp"
        android:layout_height="58dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="16dp"
        android:onClick="Help"
        android:text="DONATE YOUR TOYS DIRECTLY"
        app:backgroundTint="@color/Perisimone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="355dp"
        android:layout_height="114dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:fontFamily="baskerville"
        android:text="@string/para3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="312dp"
        android:layout_height="177dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:srcCompat="@drawable/don2" />
</androidx.constraintlayout.widget.ConstraintLayout>